css/expdb.css
/* ... */
.sectiontitleyellow a{
  color: #f0ad4e;
  text-decoration: none
}

.newmenu li > a{
  color: #666;
}

.newmenu li i{
  padding-right: 5px;
}

.lead{
  font-weight: 300 !important;
}

.openmlsectioninfo{
  background: #ececec;
  font-family: "RobotoDraft","Roboto",sans-serif;
  font-size: 14px;
  padding-top: 20px;
  padding-bottom:50px;
  height: 100%;
    -webkit-overflow-scrolling: touch;
    -ms-overflow-style: none;
}

.rightpanel{
  margin-left:265px;
  width: -moz-calc(100% - 265px);
  width: -webkit-calc(100% - 265px);
  width: calc(100% - 265px);
  height: 100vh;
}

.topborder{
  background: #ececec;
/*    overflow: hidden;*/
    position: relative;
    backface-visibility: hidden;
    will-change: overflow;
    clear: both;
}

.endless{
  /*height: 100vh;*/
}

.guidesection{
  background: #ffffff;
}

.guidecontainer{
  background-color: #ffffff;
  height: 100%;
  min-height: 1000px;
}

.guidechapter{
  padding-top: 5px;
  background-color: #f6f6f6;
  border-bottom: 1px solid #d6d6d6;
  border-radius: 0px;
  box-shadow: none;
  padding-bottom: 5px;
  margin-bottom: 0px;
}

.sidenav panel{
  background-color: #f6f6f6;
}

.topchapter{
  margin-top: 20px;
  background-color: #f6f6f6;
  border-bottom: 1px solid #d6d6d6;
  border-radius: 0px;
  box-shadow: none;
  padding-bottom: 10px;
}

.guidechapter-contact{
  margin-top: 30px;
  margin-bottom: 30px;
  background-color: #f6f6f6;
  box-shadow: none;
  padding-left: 15px;
  padding-bottom: 60px;
}

.simplesection{
  font-family: "RobotoDraft","Roboto",sans-serif;
  font-size: 14px;
  padding-bottom: 50px;
    overflow-y: auto;
    overflow-x: visible;
    height: 100%;
    -webkit-overflow-scrolling: touch;
    -ms-overflow-style: none;
}

.searchicon{
  text-align: center;
}

.openmlsectioninfo h1,h2,h3{
  font-family: 'Roboto', sans-serif;
  font-weight: 300 !important;
  margin-bottom: 10px;
  margin-top: 10px;
  line-height: 48px;
}

.openmlsectioninfo h1{
  font-size: 40px;
  color: #757575 !important;
  margin-bottom: 20px;
}

.simpleheader h1{
  font-size: 40px;
  color: #757575 !important;
  margin-bottom: 20px;
}

.openmlsectioninfo h1 > a{
  color: #757575 !important;
}


.openmlsectioninfo h1 i{
  padding-right: 10px;
}


.openmlsectioninfo h2{
  margin-top: 20px;
  font-size: 25px;
  margin-bottom: 20px;
}


.openmlsectioninfo h3{
  font-size: 25px;
  padding-top:30px;
  padding-bottom: 5px;
  clear: both;
}

.markdown-body h1{
  font-family: 'Roboto', sans-serif;
  border: none !important;
  margin-top: 28px;
  font-size: 25px;
  color: #ec5148;
  margin-top: 20px !important;
  margin-bottom: 10px !important;
  padding: 0px !important;
}


.markdown-body h2{
  font-family: 'Roboto', sans-serif;
  border: none !important;
  margin-top: 28px;
  font-size: 25px;
  color: #ec5148;
  margin-top: 20px !important;
  margin-bottom: 10px !important;
  padding: 0px !important;
}

.markdown-body h3{
  font-family: 'Roboto', sans-serif;
  border: none !important;
  margin-top: 28px;
  font-size: 22px;
  color: #ec5148;
  margin-top: 20px !important;
  margin-bottom: 10px !important;
  padding: 0px !important;

}

.markdown-body h4{
  font-family: 'Roboto', sans-serif;
  border: none !important;
  margin-top: 28px;
  font-size: 19px;
  color: #ec5148;
  margin-top: 20px !important;
  margin-bottom: 10px !important;
  padding: 0px !important;

}

.markdown-body h5{
  font-family: 'Roboto', sans-serif;
  border: none !important;
  margin-top: 28px;
  font-size: 16px;
  color: #ec5148;
  margin-top: 20px !important;
  margin-bottom: 10px !important;
  padding: 0px !important;

}

.markdown-body h6{
  font-family: 'Roboto', sans-serif;
  border: none !important;
  margin-top: 28px;
  font-size: 13px;
  color: #ec5148;
  margin-top: 20px !important;
  margin-bottom: 10px !important;
  padding: 0px !important;

}



h4{
  font-family: 'Roboto', sans-serif;
  font-weigth: 200;
  margin-top: 20px;
  font-size: 20px;
  border-bottom: 1px solid #cecece;
  color: #757575;
}

h5{
  font-family: 'Roboto', sans-serif;
  font-weigth: 200;
  margin-top: 30px;
  font-size: 17px;
  color: #757575;
}



.version{
  float:left;
}

.version > select{
  line-height: 50px;
}

.version > .bootstrap-select{
  background-color: white;
}

.resultoption{
  display: inline-block;
}

.inspiration{
  margin-top:50px;
  margin-bottom:50px;
  float: left;
}

.inspiration a{
  color:#666666;
}

.circle {
  border-radius: 50%;
  display: inline-block;
  margin-left: 10px;
  margin-right: 10px;
  width: 50px;
  height: 50px;
  padding-top: 10px;
  font-size: 15px;
  cursor: pointer !important;
}

.circle span{
  clear: both;
  color: #666666;
}

.introsection{
  clear: both;
  padding-top:20px;
  padding-bottom:50px;
}

.introsection h1{
  color: #FFFFFF !important;
  font-family: 'Roboto', sans-serif;
  font-weight: 200 !important;
  font-size: 35px !important;
  line-height: 60px;
  margin-bottom: 10px !important;
}

.introsection h2{
  color: #FFFFFF !important;
}

.introsection p{
  font-family: 'Roboto', sans-serif;
  font-weight: 200 !important;
  font-size: 16px !important;
}

.introsection a{
  color: #FFFFFF;
  font-weight: 400 !important;
  cursor: pointer !important;
}

.bluesection{
  background-color: #428bca;
  color: #FFFFFF;
}

.greensection{
  background-color: #5cb85c;
  color: #FFFFFF;
}

.yellowsection{
  background-color: #f0ad4e;
  color: #FFFFFF;
}

.redsection{
  background-color: #d9534f;
  color: #FFFFFF;
}

.purplesection{
  background-color: #854AB8;
  color: #FFFFFF;
}

.hotlinks{
  display: block;
  text-align:center;
  color: #666;
  float: right;
  padding: 0px;
  padding-top:10px;
  padding-bottom:10px;
  margin: 0px;
  font-size: 11pt;
}

.hotlinks li{
  display: inline-block;
  padding-left: 7px;
}

.nav-grey > li > a{
  color: #757575;
  font-family: 'Roboto', sans-serif;
  padding-right: 0px;
}

.nav-grey > li > a:hover{
  background-color: #ffffff;
  color: #666;
}
/* ... */

